--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
   "bugs": {
     "url": "https://github.com/msrtkn/express-riot-materialize/issues"
   },
-  "homepage": "https://github.com/msrtkn/express-riot-materialize#readme"
+  "homepage": "https://github.com/msrtkn/express-riot-materialize#readme",
+  "dependencies": {
+    "express": "^4.14.0",
+    "materialize": "^1.0.0",
+    "riot": "^2.5.0"
+  }
 }
