--- a/package.json
+++ b/package.json
@@ -1,28 +1,33 @@
 {
-  "name": "express-riot-materiarlize",
-  "version": "1.0.0",
-  "description": "Express",
-  "keywords": [
-    "Study"
-  ],
-  "homepage": "https://github.com/msrtkn/express-riot-materialize#readme",
-  "bugs": {
-    "url": "https://github.com/msrtkn/express-riot-materialize/issues"
-  },
-  "license": "MIT",
-  "author": "Masaru Takano",
-  "main": "src/app.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/msrtkn/express-riot-materialize.git"
-  },
-  "scripts": {
-    "test": "node src/app.js 3000",
-    "start": "sudo node src/app.js 80"
-  },
-  "dependencies": {
-    "express": "^4.14.0",
-    "materialize": "^1.0.0",
-    "riot": "^2.5.0"
-  }
+	"name": "express-riot-materiarlize",
+	"version": "1.0.0",
+	"description": "Express",
+	"keywords": [
+		"Study"
+	],
+	"homepage": "https://github.com/msrtkn/express-riot-materialize#readme",
+	"bugs": {
+		"url": "https://github.com/msrtkn/express-riot-materialize/issues"
+	},
+	"license": "MIT",
+	"author": "Masaru Takano",
+	"main": "src/app.js",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/msrtkn/express-riot-materialize.git"
+	},
+	"scripts": {
+		"test": "node src/app.js 3000",
+		"start": "sudo node src/app.js 80"
+	},
+	"dependencies": {
+		"express": "^4.14.0",
+		"materialize": "^1.0.0",
+		"riot": "^2.5.0",
+		"webpack": "^1.13.1"
+	},
+	"devDependencies": {
+		"babel": "^6.5.2",
+		"pug": "^2.0.0-beta4"
+	}
 }
